--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-안녕하세요. <br/> 최태서입니다.
+안녕하세요. <br/> 최태서입니다.<br/>
+<img src="image/noze1.jpg" width="32%"/>
+<img src="image/noze2.jpg" width="32%"/>
+<img src="image/noze3.jpg" width="32%"/>
+
+<a href="http://www.youtube.com"><img src="image/noze1.jpg" width="32%"/></a>
