--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 안녕하세요. <br/> 최태서입니다.<br/>
+</h1>저는 3학년 7반 최태서입니다. <br/> <br/>
 <img src="image/noze1.jpg" width="32%"/>
 <img src="image/noze2.jpg" width="32%"/>
 <img src="image/noze3.jpg" width="32%"/>
