--- a/index.html
+++ b/index.html
@@ -1,7 +1,24 @@
-안녕하세요. <br/> 최태서입니다.<br/>
-</h1>저는 3학년 7반 최태서입니다. <br/> <br/>
-<img src="image/noze1.jpg" width="32%"/>
-<img src="image/noze2.jpg" width="32%"/>
-<img src="image/noze3.jpg" width="32%"/>
+<html>
+    <head></head>
+    <body>
+        <h2>ilsanconvention</h2>
+        <p>   
+            102<br/>
+            290<br/>
+            145<br/>
+            게시물<br/>
+            팔로워<br/>
+            팔로잉<br/>
+        </p>
+        <p>
+            <strong>
+                일산국제컨벤션고등학교<br/>
+            </strong><br/>    
+            전국 1위! 경영, 관광, 패션, IT, 디자인 선도 특성화고등학교!<br/>
+            <a href="http://www.ilsan.hs.kr">www.ilsan.hs.kr/</a>
+        </p>    
+        <button>프로필편집<br/></button>
+    </body>
+</html>    
+    
 
-<a href="http://www.youtube.com"><img src="image/noze1.jpg" width="32%"/></a>
